[package]
name = "gfa2obj"
version = "0.1.0"
authors = ["christian <christian@chfi.se>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/chfi/gfa2obj"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gfa = { version = "0.10" }
handlegraph = "0.7.0-alpha.7"

crossbeam = "0.8"
parking_lot = "0.11.1"
rayon = "1.5"

lazy_static = "1.4.0"
anyhow = "1.0"

rustc-hash = "1.1"

log = "0.4"
flexi_logger = { version = "0.18", features = ["async"] }
argh = "0.1.5"

rand = "0.8"

rgb = "0.8.25"
colorous = "1.0.5"

nalgebra = "0.24"
nalgebra-glm = "0.10"

bstr = "0.2"

# rhai = { version = "1.0.1", features = ["sync", "f32_float", "metadata", "internals"] }
# bytemuck = { version = "1.7", features = ["derive"] }
